# pyscan

./: .gitigore  LICENSE  README.md  pyproject.toml
pyscan/: __init__.py  cli.py
pyscan/reports/: html_report.py  json_report.py
pyscan/scanner/: base.py  dirs.py  files.py  headers.py  sqli.py  tls.py  xss.py
pyscan/utils/: evidence.py  http.py  throttling.py
tests/: test_scanner.py
